<resources>
    <string name="app_name">Chat GPT</string>
    <string name="logo_desc">LOGO_DESC</string>
    <string name="chat_gpt">Chat GPT</string>
    <string name="welcome_to">Welcome to</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="welcome_chatgpt">Chat GPT👋</string>
    <string name="welcome_or_continue_with">or continue with</string>
    <string name="google_icon_desc">GOOGLE ICON DESC</string>
    <string name="apple_icon_desc">APPLE ICON DESC</string>
    <string name="facebook_icon_desc">FACEBOOK ICON DESC</string>
    <string name="back_arrow_desc">BACK ARROW DESC</string>
    <string name="hello_there">Hello there 👋</string>
    <string name="signup_text2"><![CDATA[Please enter you email & password to create an account.]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="text_terms"><![CDATA[I agree to the Terms & Privacy Policy]]></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="signup_dialoguebox_successful_message">Please wait… \nYou will be directed to the homepage</string>
    <string name="sign_up_dialogue_successful_title">Sign up Successful!</string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_amp_privacy_policy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="login_text1">Welcome back 👋</string>
    <string name="login_text2"><![CDATA[Please enter your email & password to login]]></string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_your_password_t1">Reset your password</string>
    <string name="forget_password_activity_t2">Please enter your email and we will send an OTP code in the next step to reset you password.</string>
    <string name="reset">Reset</string>
    <string name="enter_your_query">Enter your query</string>
    <string name="sample_user_question">Hello, How are you!</string>
    <string name="sample_time">8:30 PM</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="dialogue_image">Dialogue_Image</string>
</resources>