<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageButton
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/back_arrow_desc"
            android:src="@drawable/back_arrow_icon"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/signUp_greeting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/login_text1"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signUp_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/login_text2"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/email"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingEnd="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/password"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/signup_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/remember_me"
                android:textColor="@color/textColor"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>


        <TextView
            android:id="@+id/login_forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:text="@string/forgot_password"
            android:textColor="@color/sea_green"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_Login_Confirm"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/login_signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Sign up"
            android:textColor="@color/sea_green"
            android:textStyle="bold"
            tools:ignore="HardcodedText,TextContrastCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_Login_Confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primary_button_color"
        android:fontFamily="sans-serif-black"
        android:text="@string/log_in"
        android:textColor="@color/primary_button_text_color"
        tools:ignore="TextContrastCheck" />


    <ProgressBar
        android:id="@+id/login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>