<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageButton
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/back_arrow_desc"
            android:src="@drawable/back_arrow_icon"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/forgot_password_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/reset_your_password_t1"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgot_password_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/forget_password_activity_t2"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/forgot_password_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/email"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgot_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingEnd="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/hintColor"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,DuplicateSpeakableTextCheck" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_forgot_password_continue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primary_button_color"
        android:fontFamily="sans-serif-black"
        android:text="@string/reset"
        android:textColor="@color/primary_button_text_color"
        tools:ignore="TextContrastCheck" />


    <ProgressBar
        android:id="@+id/login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>